<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6D6D6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/background_buttons"
        android:layout_width="355dp"
        android:layout_height="304dp"
        android:background="#2196F3"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dial2" />


    <TextView
        android:id="@+id/number_dialed"
        android:layout_width="202dp"
        android:layout_height="62dp"
        android:background="#BFBFBF"
        android:gravity="center|left"
        android:maxLength="9"
        android:maxLines="1"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/dial1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <Button
        android:id="@+id/dial_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:onClick="dialNumber"
        android:text="@string/dial_1"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="93dp"
        android:layout_height="43dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="4dp"
        android:onClick="dialNumber"
        android:text="@string/dial_3"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="dialNumber"
        android:text="@string/dial_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dial2"
        app:layout_constraintVertical_bias="0.047" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:onClick="dialNumber"
        android:text="@string/dial_9"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:onClick="dialNumber"
        android:text="@string/dial_7"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="dialNumber"
        android:text="@string/dial_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:onClick="dialNumber"
        android:text="@string/dial_6"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="dialNumber"
        android:text="@string/dial_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.043" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:onClick="dialNumber"
        android:text="@string/dial_4"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dial1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:onClick="getDial"
        android:text="None"
        app:layout_constraintBottom_toBottomOf="@+id/dial2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dial2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:onClick="getDial"
        android:text="None"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/dial3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:onClick="getDial"
        android:text="None"
        app:layout_constraintBottom_toBottomOf="@+id/dial2"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/call"
        android:layout_width="122dp"
        android:layout_height="122dp"
        android:layout_marginTop="60dp"
        android:clickable="true"
        android:contentDescription="Call button"
        android:onClick="handleCall"
        android:scaleType="centerInside"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:srcCompat="@drawable/call" />

    <ImageView
        android:id="@+id/clean"
        android:layout_width="95dp"
        android:layout_height="83dp"
        android:onClick="cleanDial"
        app:layout_constraintBottom_toTopOf="@+id/dial3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number_dialed"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/garbage" />


</androidx.constraintlayout.widget.ConstraintLayout>